# hooksmith

./: .gitleaks.toml  CHANGELOG.md  Cargo.toml  INTEGRATION_GUIDE.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml.off
discord-hook/: Cargo.toml  README.md  webhook_events.md  webkook.md
discord-hook-core/: Cargo.toml  README.md
discord-hook-core/src/: client.rs  error.rs  mock.rs  retry.rs  sender.rs
discord-hook/examples/: basic_message.rs  rich_embed.rs  send_with_retry.rs
discord-hook/src/: client.rs  error.rs  lib.rs  message.rs
discord_hook/: Cargo.toml  README.md
discord_hook/src/: client.rs  lib.rs  macros.rs  message.rs  webhook_client.rs  webhook_error.rs  webhook_message.rs
discord_hook/tests/: integration.rs
hooksmith-core/: Cargo.toml  README.md
hooksmith-core/src/: client.rs  error.rs  lib.rs  mock.rs  retry.rs  sender.rs
scripts/: publish.sh
