[workspace]
members = ["hooksmith-core", "discord_hook"]
resolver = "2"

[workspace.package]
version    = "0.1.2"
edition    = "2024"
license    = "MIT"
repository = "https://github.com/RayburnCode/hooksmith"
homepage   = "https://github.com/RayburnCode/hooksmith"
readme     = "README.md"
categories = ["web-programming", "web-programming::http-client", "network-programming"]

# Shared dependency versions — individual crates opt in with `{ workspace = true }`.
[workspace.dependencies]
reqwest    = { version = "0.13.2", features = ["json"], default-features = false }
serde      = { version = "1",      features = ["derive"] }
serde_json = "1"
secrecy    = "0.10"
thiserror  = "2.0.18"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing    = "0.1"
