[package]
name          = "discord_hook"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
categories.workspace = true
description   = "A Rust crate for sending messages to Discord via webhooks"
documentation = "https://docs.rs/discord_hook"
keywords      = ["discord", "webhook", "notification", "bot", "async"]
exclude       = ["target/"]

[features]
# TLS backend — choose one. rustls is the default (pure Rust, no OpenSSL dep).
default = ["rustls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
hooksmith-core = { path = "../hooksmith-core", version = "0.1" }
reqwest        = { workspace = true }
secrecy        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
