[package]
name = "discord_hook"
version = "0.1.0"
edition = "2024"
description = "A Rust crate for sending messages to Discord via webhooks"
license = "MIT"

[features]
# TLS backend — choose one. rustls is the default (pure Rust, no OpenSSL dep).
default = ["rustls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }