[package]
name = "discord_hook"
version = "0.1.0"
edition = "2024"
description = "A Rust crate for sending messages to Discord via webhooks"
license = "MIT"
repository = "https://github.com/DylanRayburn/hooksmith"
readme = "../README.md"
keywords = ["discord", "webhook", "notification", "bot", "async"]
categories = ["web-programming", "web-programming::http-client", "network-programming"]
exclude = ["target/"]

[features]
# TLS backend — choose one. rustls is the default (pure Rust, no OpenSSL dep).
default = ["rustls"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
hooksmith-core = { path = "../hooksmith-core" }
reqwest        = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }