[package]
name = "hooksmith-core"
version = "0.1.0"
edition = "2024"
description = "Shared HTTP client and WebhookSender trait for the hooksmith crates"
license = "MIT"
repository = "https://github.com/RayburnCode/hooksmith"

[dependencies]
reqwest = { workspace = true }
serde   = { workspace = true }
