[package]
name          = "hooksmith-core"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
readme.workspace     = true
categories.workspace = true
description   = "Shared HTTP client and WebhookSender trait for the hooksmith crates"
documentation = "https://docs.rs/hooksmith-core"
keywords      = ["webhook", "http", "async", "notification", "client"]

[dependencies]
reqwest    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true, optional = true }

[features]
default = []
mock    = []
tracing = ["dep:tracing"]


